log_humble/build_2026-06-08_02-14-58/tutorial_pkg/stdout_stderr.log
-- The C compiler identification is GNU 11.4.0
-- The CXX compiler identification is GNU 11.4.0
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 1.3.14 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found Python3: /usr/bin/python3 (found version "3.10.12") found components: Interpreter 
-- Found rclcpp: 16.0.19 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "3.0.2")  
-- Found FastRTPS: /opt/ros/humble/include  
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Found sensor_msgs: 4.9.1 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /ws/build_humble/tutorial_pkg
[ 50%] Building CXX object CMakeFiles/my_first_node.dir/src/my_first_node.cpp.o
/ws/tutorial_pkg/src/my_first_node.cpp: In constructor ‘MyNode::MyNode()’:
/ws/tutorial_pkg/src/my_first_node.cpp:19:13: error: ‘publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
   19 |             publisher_ = create_publisher<std_msgs::msg::UInt8>
      |             ^~~~~~~~~~
      |             rmw_publisher_t
/ws/tutorial_pkg/src/my_first_node.cpp: In member function ‘void MyNode::image_callback(sensor_msgs::msg::Image_<std::allocator<void> >::SharedPtr)’:
/ws/tutorial_pkg/src/my_first_node.cpp:33:28: error: ‘UInt’ is not a member of ‘std_msgs::msg’; did you mean ‘UInt8’?
   33 |             std_msgs::msg::UInt 8 brightness_msg;
      |                            ^~~~
      |                            UInt8
/ws/tutorial_pkg/src/my_first_node.cpp:34:13: error: ‘brightness_msg’ was not declared in this scope
   34 |             brightness_msg.data = avg;
      |             ^~~~~~~~~~~~~~
/ws/tutorial_pkg/src/my_first_node.cpp:34:35: error: ‘avg’ was not declared in this scope
   34 |             brightness_msg.data = avg;
      |                                   ^~~
/ws/tutorial_pkg/src/my_first_node.cpp:35:13: error: ‘publisher_’ was not declared in this scope; did you mean ‘rmw_publisher_t’?
   35 |             publisher_->publish(brightness_msg);
      |             ^~~~~~~~~~
      |             rmw_publisher_t
gmake[2]: *** [CMakeFiles/my_first_node.dir/build.make:76: CMakeFiles/my_first_node.dir/src/my_first_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/my_first_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
